if(WIN32)
  option(gtest_force_shared_crt ON)
  add_subdirectory(gtest) # place it there on Windows
  #include_directories(${SSTL_TEST_ROOT_DIR})
  #message(STATUS "### GTest Include dir added: '${SSTL_TEST_ROOT_DIR}'")
  get_filename_component(GTEST_INCLUDE_DIR gtest/include ABSOLUTE)
  set(GTEST_BOTH_LIBRARIES gtest gtest_main)
else()
  find_package(GTest REQUIRED)
endif()
include_directories(${GTEST_INCLUDE_DIR})
message(STATUS "### GTest Include dir added: '${GTEST_INCLUDE_DIR}'")

add_subdirectory(compiler)
add_subdirectory(types)
add_subdirectory(string)
# add_subdirectory(vector)
