project(test_string)
cmake_minimum_required(VERSION 2.8)

include_directories(${GTEST_INCLUDE_DIR})

if(SSTL_TEST_SSTL)
    add_executable(test_string test_string.cpp)
    target_link_libraries(test_string ${GTEST_BOTH_LIBRARIES})
    add_test(NAME test_string COMMAND test_string)
endif()
if(SSTL_TEST_NATIVE_STL)
    add_executable(test_string_native_sstl test_string.cpp)
    set_target_properties(test_string_native_sstl PROPERTIES COMPILE_FLAGS -DSSTL_TEST_NATIVE_STL=1)
    target_link_libraries(test_string_native_sstl ${GTEST_BOTH_LIBRARIES})
    add_test(NAME test_string_native_sstl COMMAND test_string_native_sstl)
endif()
